--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,26 @@ body {
     text-wrap: balance;
   }
 }
+
+.link {
+  background: #6db9ef;
+  border-radius: 20px;
+  padding: 15px;
+  width: 200px;
+  display: block;
+  margin: auto;
+  text-align: center;
+}
+
+.title {
+  font-size: 2em;
+  padding: 10px;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .title {
+    font-size: 4em;
+    padding: 30px;
+  }
+}
